unpackaged/objects/TMFC_TeamForce_Sprint__c.object
<CustomObject>
  <fields>
    <fullName>TMFC_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Sprints</relationshipLabel>
    <relationshipName>TeamForce_Sprints</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>TMFC_Sprint_Delivery_Sign_Off_Date__c</fullName>
    <label>Sprint Delivery Sign-Off Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>TMFC_Sprint_Delivery_Sign_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint Delivery Sign-Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TeamForce_Sprints</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>TMFC_Sprint_Description__c</fullName>
    <label>Sprint Description</label>
    <length>10000</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>TMFC_Sprint_Design_Sign_Off_Date__c</fullName>
    <label>Sprint Design Sign Off Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>TMFC_Sprint_Design_Sign_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint Design Sign Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TeamForce_Sprints1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>TMFC_Sprint_End_Date__c</fullName>
    <label>Sprint End Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>TMFC_Sprint_Start_Date__c</fullName>
    <label>Sprint Start Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>TMFC_Sprint_Status__c</fullName>
    <label>Sprint Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Planned</fullName>
          <default>true</default>
          <label>Planned</label>
        </value>
        <value>
          <fullName>In Progress</fullName>
        </value>
        <value>
          <fullName>Completed</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>TeamForce Sprint</label>
  <listViews>
    <fullName>All_Sprints</fullName>
    <columns>NAME</columns>
    <columns>TMFC_Project__c</columns>
    <columns>TMFC_Sprint_Status__c</columns>
    <columns>TMFC_Sprint_Delivery_Sign_Off__c</columns>
    <columns>TMFC_Sprint_Start_Date__c</columns>
    <columns>TMFC_Sprint_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sprints</label>
  </listViews>
  <listViews>
    <fullName>All_Weekly_Releases</fullName>
    <columns>NAME</columns>
    <columns>TMFC_Project__c</columns>
    <columns>TMFC_Sprint_Status__c</columns>
    <columns>TMFC_Sprint_Delivery_Sign_Off__c</columns>
    <columns>TMFC_Sprint_Start_Date__c</columns>
    <columns>TMFC_Sprint_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>NAME</field>
      <operation>contains</operation>
      <value>Weekly Release</value>
    </filters>
    <filters>
      <field>TMFC_Sprint_Status__c</field>
      <operation>notEqual</operation>
      <value>Completed</value>
    </filters>
    <label>All Open Weekly Releases</label>
  </listViews>
  <listViews>
    <fullName>TMFC_All</fullName>
    <columns>NAME</columns>
    <columns>TMFC_Project__c</columns>
    <columns>TMFC_Sprint_Status__c</columns>
    <columns>TMFC_Sprint_Delivery_Sign_Off__c</columns>
    <columns>TMFC_Sprint_Start_Date__c</columns>
    <columns>TMFC_Sprint_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>TMFC_Sprint_Status__c</field>
      <operation>notEqual</operation>
      <value>Completed</value>
    </filters>
    <label>All Open</label>
  </listViews>
  <nameField>
    <label>TeamForce Sprint Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>TeamForce Sprints</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>